--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
- 
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -16,9 +15,7 @@
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
-    "otp-generator": "^4.0.1",
-    "randomcolor": "^0.6.2",
-    "socket.io": "^4.7.5"
+    "randomcolor": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
