--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "handlebars": "^4.7.8",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.7",
     "nodemailer": "^6.9.13",
     "randomcolor": "^0.6.2"
   },
