--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "handlebars": "^4.7.8",
     "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.7",
