--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.7",
-    "nodemailer": "^6.9.13",
+    "nodemailer": "^6.9.14",
+    "otp-generator": "^4.0.1",
     "randomcolor": "^0.6.2"
   },
   "devDependencies": {
